# gpr-300-spr2024-olivia-santamauro

./: CMakeLists.txt
assignments/assignment0/: main.cpp
assignments/assignment1/: main.cpp
assignments/assignment1/assets/: HDR.frag  HDR.vert  bloom.frag  blur.frag  chromatic.frag  edge.frag  fullscreen.frag  greyscale.frag  inverse.frag  lit.frag  sharpness.frag  vignette.frag
assignments/assignment2/: CMakeLists.txt  main.cpp
assignments/assignment2/assets/: depth.frag  depth.vert  plane.frag  plane.vert  shadow.frag
assignments/worksession0/: CMakeLists.txt  main.cpp
assignments/worksession0/assets/: gist.txt  toon.frag
assignments/worksession1/: CMakeLists.txt  main.cpp
assignments/worksession1/assets/: water.frag
assignments/worksession2/: CMakeLists.txt  main.cpp
assignments/worksession2/assets/: lit.vert  water.frag  water.vert
assignments/worksession3/: CMakeLists.txt  main.cpp
assignments/worksession3/assets/: base.frag  base.vert  default.frag  default.vert  geo.frag  geo.vert  lit.frag  lit.vert  sphere.frag  sphere.vert
assignments/worksession4/: CMakeLists.txt  main.cpp
assignments/worksession4/assets/: lit.frag  pbr.frag
core/: CMakeLists.txt
core/ew/: texture.cpp
core/fb/: framebuffer.cpp  framebuffer.h
